# time_openmeteo

./: .gitignore  README.md  async_producer.py  consumer.py  docker-compose.yaml  producer.py  pyproject.toml
db/: db.py  td.py
deprecated/: producer.py
