[tool.poetry]
name = "time-openmeteo"
version = "0.1.0"
description = ""
authors = ["Gilmar Neves <gilmarneves@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
confluent-kafka = "^2.7.0"
schedule = "^1.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
