[tool.poetry]
name = "time-openmeteo"
version = "0.1.0"
description = ""
authors = ["nevesgil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
confluent-kafka = "^2.7.0"
schedule = "^1.2.2"
requests = "^2.32.3"
taos = "^1.0.1"
aiohttp = "^3.11.11"
asyncio = "^3.4.3"
psycopg2 = "^2.9.10"
taos-ws-py = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
