[tool.poetry]
name = "time-openmeteo"
version = "0.1.0"
description = ""
authors = ["nevesgil"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
confluent-kafka = "^2.7.0"
aiohttp = "^3.11.11"
requests = "^2.32.3"
schedule = "^1.2.2"
taos-ws-py = "^0.3.8"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
